--- a/be/SGBD/SGBD.csproj
+++ b/be/SGBD/SGBD.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\SGBD.Domain\SGBD.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
