--- a/be/SGBD/appsettings.json
+++ b/be/SGBD/appsettings.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "SGBD": "User Id=system;Password=231;Data Source=//localhost:1521/xe"
+  },
+  "FrontendApp": {
+    "Url": "https://localhost:7018"
   }
 }
