--- a/be/SGBD/appsettings.Development.json
+++ b/be/SGBD/appsettings.Development.json
@@ -9,7 +9,6 @@
     "SGBD": "User Id=system;Password=231;Data Source=//localhost:1521/xe"
   },
   "FrontendApp": {
-    "Url": "https://localhost:7018",
-    "Angular": "http: //localhost:4200"
+    "Url": "http: //localhost:4200"
   }
 }
