--- a/be/SGBD/appsettings.Development.json
+++ b/be/SGBD/appsettings.Development.json
@@ -10,5 +10,11 @@
   },
   "FrontendApp": {
     "Url": "http://localhost:4200"
+  },
+  "DateTimeFormats": {
+    "1": "yyyy-MM-ddTHH:mm:ss",
+    "2": "yyyy",
+    "3": "yyyy-MM",
+    "4": "yyyy-MM-dd"
   }
 }
